Added crud handlers for users service. Fixed openapi defenition for users service.
